--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,7 @@
         { "path": "packages/generator-langium" },
         { "path": "examples/arithmetics" },
         { "path": "examples/domainmodel" },
-        { "path": "examples/statemachine" }
+        { "path": "examples/statemachine" },
+        { "path": "examples/small-java" }
     ]
  }
