working with domainmodel

--- a/examples/domainmodel/package.json
+++ b/examples/domainmodel/package.json
@@ -79,5 +79,9 @@
     "author": {
         "name": "TypeFox",
         "url": "https://www.typefox.io"
+    },
+    "wallaby": {
+        "trace" : true,
+        "debug": true
     }
 }
