--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,11 +4,9 @@ on:
   push:
     branches:
       - main
-      - dev
   pull_request:
     branches:
       - main
-      - dev
 
 jobs:
   build:
@@ -21,7 +19,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16.x'
+        node-version: 16
     - name: Build
       shell: bash
       run: |
