--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "dev-clean": "shx rm -rf packages/**/node_modules && npm uninstall -g langium-workspaces langium-cli generator-langium langium && npm unlink langium-workspaces langium-cli generator-langium langium"
   },
   "devDependencies": {
+    "@types/jest": "^29.1.2",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "@vitest/coverage-c8": "^0.23.2",
     "@vitest/ui": "^0.23.4",
     "eslint": "^8.17.0",
     "eslint-plugin-header": "^3.1.1",
+    "jest-expect-message": "^1.1.3",
     "shx": "^0.3.4",
     "typescript": "^4.7.4",
     "vitest": "^0.24.1"
