--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,8 @@
     //   "node"
     // ],  
     "types": [
-      "vitest/globals",
+      "jest",
+      "jest-expect-message",
       "node"
     ],                                        /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
