--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,6 +55,16 @@
             ]
         },
         {
+            "name": "Run Blocks Extension",
+            "type": "extensionHost",
+            "request": "launch",
+            "runtimeExecutable": "${execPath}",
+            "args": [
+                "${workspaceFolder}/examples/langium-blocks/example",
+                "--extensionDevelopmentPath=${workspaceFolder}/examples/langium-blocks"
+            ]
+        },
+        {
             "name": "Attach to Language Server",
             "type": "node",
             "port": 6009,
@@ -68,7 +78,8 @@
                 "${workspaceFolder}/examples/arithmetics/out/**/*.js",
                 "${workspaceFolder}/examples/domainmodel/out/**/*.js",
                 "${workspaceFolder}/examples/statemachine/out/**/*.js",
-                "${workspaceFolder}/packages/langium-vscode/out/**/*.js"
+                "${workspaceFolder}/packages/langium-vscode/out/**/*.js",
+                "${workspaceFolder}/examples/langium-blocks/out/**/*.js"
             ]
         },
         {
